--- a/topic/random.gmi
+++ b/topic/random.gmi
@@ -9,6 +9,8 @@
 => gemini://loadingdata.nl/page/2014-06-14_Edge_of_life.gmi Edge of life
 => gemini://loadingdata.nl/page/2015-02-03_A_new_life_for_the_vacuum_tube.gmi A new life for the vacuum tube!
 => gemini://loadingdata.nl/page/2015-02-18_Grow_update_February_2015.gmi Grow Update February 2015
+=> gemini://loadingdata.nl/page/2015-06-23_Chinese_meat_pie.gmi Chinese meat pie (牛肉馅饼)
+
 
 => gemini://loadingdata.nl/ Home
 => gemini://loadingdata.nl/topic/ Topics
