--- a/topic/books.gmi
+++ b/topic/books.gmi
@@ -2,6 +2,10 @@
 
 => gemini://loadingdata.nl/page/2015-02-05_Reading_update_2014.gmi Reading Update 2014
 => gemini://loadingdata.nl/page/2015-02-11_Reading_update_January_2015.gmi Reading Update January 2015
+=> gemini://loadingdata.nl/page/2015-03-03_Reading_update_February_2015.gmi Reading Update February 2015
+=> gemini://loadingdata.nl/page/2015-04-02_Reading_update_March_2015.gmi Reading Update March 2015
+=> gemini://loadingdata.nl/page/2015-04-30_Reading_update_April_2015.gmi Reading Update April 2015
+=> gemini://loadingdata.nl/page/2015-07-30_Reading_update_May_June_2015.gmi Reading Update May/June 2015
 
 => gemini://loadingdata.nl/ Home
 => gemini://loadingdata.nl/topic/ Topics
