--- a/topic/index.gmi
+++ b/topic/index.gmi
@@ -1,6 +1,7 @@
 # Topics
 
 => gemini://loadingdata.nl/topic/books.gmi Books
+=> gemini://loadingdata.nl/topic/personal.gmi Personal
 => gemini://loadingdata.nl/topic/philosophy.gmi Philosophy
 => gemini://loadingdata.nl/topic/politics.gmi Politics
 => gemini://loadingdata.nl/topic/programming.gmi Programming
