--- a/topic/politics.gmi
+++ b/topic/politics.gmi
@@ -13,6 +13,10 @@
 => gemini://loadingdata.nl/page/2014-11-10_Theyre_not_terrorists.gmi They're not terrorists
 => gemini://loadingdata.nl/page/2015-01-16_American_fanatics.gmi American fanatics
 => gemini://loadingdata.nl/page/2015-02-11_Allegiance_propaganda.gmi Allegiance propaganda
+=> gemini://loadingdata.nl/page/2015-03-26_Missing_Corium.gmi The case of the missing Corium
+=> gemini://loadingdata.nl/page/2015-04-02_Google_must_be_obeyed.gmi Google must be obeyed
+=> gemini://loadingdata.nl/page/2015-08-05_Google_compromised.gmi More proof Google has been compromised
+=> gemini://loadingdata.nl/page/2015-12-29_On_terrorism_and_propaganda.gmi On terrorism and propaganda
 
 => gemini://loadingdata.nl/ Home
 => gemini://loadingdata.nl/topic/ Topics
