--- a/topic/programming.gmi
+++ b/topic/programming.gmi
@@ -14,6 +14,10 @@
 => gemini://loadingdata.nl/page/2014-11-27_Java_generators.gmi Java Generators
 => gemini://loadingdata.nl/page/2015-01-14_Blue_oclock.gmi Blue o'Clock
 => gemini://loadingdata.nl/page/2015-03-03_Table_drive_FizzBuzz_state_machine.gmi Table driven FizzBuzz State Machine
+=> gemini://loadingdata.nl/page/2015-06-24_Mea_Culpa_Eudyptula.gmi Mea Culpa Eudyptula
+=> gemini://loadingdata.nl/page/2015-07-03_Lua_Classes.gmi Lua Classes
+=> gemini://loadingdata.nl/page/2015-07-10_Preventing_NodeMCU_Bootloops.gmi Preventing NodeMCU Bootloops
+=> gemini://loadingdata.nl/page/2015-12-29_MQTT_to_Adafruit.gmi MQTT to Adafruit-IO
 
 ## Oberon
 
