--- a/topic/project.gmi
+++ b/topic/project.gmi
@@ -3,6 +3,7 @@
 => gemini://loadingdata.nl/page/2014-06-01_Pocket_to_epub.gmi Pocket to epub
 => gemini://loadingdata.nl/page/2014-06-01_Java_Bootcamp.gmi Java Bootcamp
 => gemini://loadingdata.nl/page/2014-06-06_Accounting_for_geeks.gmi Accounting for geeks
+=> gemini://loadingdata.nl/page/2015-04-15_Refining_Internet_QoS_and_Astar_Search_with_SunEvet.gmi Refining Internet QoS and A* Search with SunEvet
 
 => gemini://loadingdata.nl/ Home
 => gemini://loadingdata.nl/topic/ Topics
