--- a/page/2018-01-08_Answer.gmi
+++ b/page/2018-01-08_Answer.gmi
@@ -12,8 +12,7 @@ Today I read the short story "Answer" by Fredric Brown, and was impressed at how
 >
 > Dwar Reyn spoke briefly to the watching and listening trillions. Then after a moment's silence he said, "Now, Dwar Ev."
 >
-> Dwar Ev threw the switch. There was a mighty hum, the surge of power from ninety-six billion planets. Lights flashed and quieted along the miles-long panel.
-Dwar Ev stepped back and drew a deep breath. "The honor of asking the first question is yours, Dwar Reyn."
+> Dwar Ev threw the switch. There was a mighty hum, the surge of power from ninety-six billion planets. Lights flashed and quieted along the miles-long panel. Dwar Ev stepped back and drew a deep breath. "The honor of asking the first question is yours, Dwar Reyn."
 >
 > "Thank you," said Dwar Reyn. "It shall be a question which no single cybernetics machine has been able to answer."
 >
